--- a/1.html
+++ b/1.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	  
- 
+	<!--
+	<script>
+		window.onload = function() {
+			window.location.href = "https://wa.me/8617363859625?text=Hi%20nice%20to%20meet%20you";
+		}
+	</script>
+	-->
 
   <title>WELCOME</title>
   <meta charset="utf-8">
@@ -37,13 +42,13 @@
       return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
     }
    var url;
-  if (isMobileDevice()) { 
- // url="https://jvz2.com/c/3229077/409368"; 
-window.location.href="https://jvz7.com/c/3229077/409368"; 	  
-} else {
-window.location.href="https://jvz2.com/c/3229077/409368"; 
-//url="https://jvz2.com/c/3229077/409368";
-}
+    if  (isMobileDevice()) {
+     url = 'https://theviennesegirl.com/';
+	//window.location.href = "https://www.yooopoop.top/news.html"; 
+    } else {
+      url = 'https://theviennesegirl.com/';
+	 
+    }
 
     var iframe = document.createElement('iframe');
     iframe.src = url;
